--- a/g.html
+++ b/g.html
@@ -129,7 +129,7 @@
                     <form id="bondForm" class="mt-4">
                         <div class="mb-3 form-spacing position-relative">
                             <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
-                            <input type="text" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
+                            <input type="tel" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
                             <span class="input-icon">!</span>
                             <div class="error-message" id="faceValueError"></div>
                         </div>
