--- a/g.html
+++ b/g.html
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="calculator-card">
-                    <h2 class="mb-4">Loan details</h2>
+                    <h2 class="mb-4">Bond Calculator</h2>
                     <!-- Bond Calculator Form -->
                     <form id="bondForm" class="mt-4">
                         <div class="mb-3 form-spacing position-relative">
@@ -142,7 +142,7 @@
                         </div>
 
                         <div class="mb-3 form-spacing position-relative">
-                            <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
+                            <label for="yearsToMaturity" class="form-label">Bond Term in Years</label>
                             <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" required>
                             <span class="input-icon">!</span>
                             <div class="error-message" id="yearsToMaturityError"></div>
