--- a/g.html
+++ b/g.html
@@ -111,7 +111,7 @@
     <!-- Top Navbar -->
     <nav class="navbar navbar-light border-bottom">
         <a class="navbar-brand" href="#">
-            <img src="https://via.placeholder.com/40" alt="Logo"> <!-- Add your logo URL -->
+            <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
         </a>
         <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
