--- a/g.html
+++ b/g.html
@@ -151,7 +151,7 @@
                         <div class="mb-3 form-spacing position-relative">
                             <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
                             <select class="form-select" id="paymentFrequency" required>
-                                <option value="">Choose...</option>
+                                <option value="">Select Payment Frequency..</option>
                                 <option value="1">Annually</option>
                                 <option value="2">Semi-Annually</option>
                                 <option value="4">Quarterly</option>
