--- a/g.html
+++ b/g.html
@@ -111,7 +111,7 @@
     <!-- Top Navbar -->
     <nav class="navbar navbar-light border-bottom">
         <a class="navbar-brand" href="#">
-            <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
+            <img src="https://via.placeholder.com/40" alt="Logo"> <!-- Add your logo URL -->
         </a>
         <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -124,7 +124,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="calculator-card">
-                    <h2 class="mb-4">Bond Calculator</h2>
+                    <h2 class="mb-4">Loan details</h2>
                     <!-- Bond Calculator Form -->
                     <form id="bondForm" class="mt-4">
                         <div class="mb-3 form-spacing position-relative">
@@ -142,7 +142,7 @@
                         </div>
 
                         <div class="mb-3 form-spacing position-relative">
-                            <label for="yearsToMaturity" class="form-label">Bond Term in Years</label>
+                            <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
                             <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" required>
                             <span class="input-icon">!</span>
                             <div class="error-message" id="yearsToMaturityError"></div>
@@ -151,7 +151,7 @@
                         <div class="mb-3 form-spacing position-relative">
                             <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
                             <select class="form-select" id="paymentFrequency" required>
-                                <option value="">Select Payment Frequency..</option>
+                                <option value="">Choose...</option>
                                 <option value="1">Annually</option>
                                 <option value="2">Semi-Annually</option>
                                 <option value="4">Quarterly</option>
@@ -176,22 +176,22 @@
     </div>
 
     <!-- Result Modal -->
-<div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div id="calculationResults"></div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="calculationResults"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
     <!-- Footer -->
     <footer>
@@ -250,39 +250,41 @@
         }
 
         function calculateBondPrice() {
-    const faceValue = parseFloat(faceValueInput.value.replace(/,/g, ''));
-    const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
-    const yearsToMaturity = parseInt(document.getElementById('yearsToMaturity').value);
-    const paymentFrequency = parseInt(document.getElementById('paymentFrequency').value);
+            const faceValue = parseFloat(faceValueInput.value.replace(/,/g, ''));
+            const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
+            const yearsToMaturity = parseInt(document.getElementById('yearsToMaturity').value);
+            const paymentFrequency = parseInt(document.getElementById('paymentFrequency').value);
 
-    // Calculate bond price (simplified formula)
-    const couponPayment = faceValue * couponRate / paymentFrequency;
-    const totalPayments = yearsToMaturity * paymentFrequency;
-    let bondPrice = 0;
+            // Calculate bond price (simplified formula)
+            const couponPayment = faceValue * couponRate / paymentFrequency;
+            const totalPayments = yearsToMaturity * paymentFrequency;
+            let bondPrice = 0;
 
-    for (let i = 1; i <= totalPayments; i++) {
-        bondPrice += couponPayment / Math.pow(1 + couponRate / paymentFrequency, i);
-    }
+            for (let i = 1; i <= totalPayments; i++) {
+                bondPrice += couponPayment / Math.pow(1 + couponRate / paymentFrequency, i);
+            }
 
-    bondPrice += faceValue / Math.pow(1 + couponRate / paymentFrequency, totalPayments);
+            bondPrice += faceValue / Math.pow(1 + couponRate / paymentFrequency, totalPayments);
 
-    // Additional calculations
-    const totalCouponPayments = couponPayment * totalPayments;
-    const totalReceived = bondPrice + totalCouponPayments;
-    const npv = bondPrice; // For simplicity, we're treating the bond price as NPV here
+            // Additional calculations
+            const totalCouponPayments = couponPayment * totalPayments;
+            const totalReceived = bondPrice + totalCouponPayments;
+            const npv = bondPrice; // For simplicity, we're treating the bond price as NPV here
+            const totalInterestEarned = totalCouponPayments - bondPrice; // Total interest earned
 
-    // Display results in modal
-    const resultsHtml = `
-        <p><strong>Calculated Bond Price:</strong> TZS ${bondPrice.toFixed(2)}</p>
-        <p><strong>Total Coupon Payments:</strong> TZS ${totalCouponPayments.toFixed(2)}</p>
-        <p><strong>Total Amount Received:</strong> TZS ${totalReceived.toFixed(2)}</p>
-        <p><strong>Net Present Value (NPV):</strong> TZS ${npv.toFixed(2)}</p>
-    `;
-    
-    document.getElementById('calculationResults').innerHTML = resultsHtml;
-    const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
-    resultModal.show();
-}
+            // Display results in modal
+            const resultsHtml = `
+                <p><strong>Calculated Bond Price:</strong> TZS ${bondPrice.toFixed(2)}</p>
+                <p><strong>Total Coupon Payments:</strong> TZS ${totalCouponPayments.toFixed(2)}</p>
+                <p><strong>Total Amount Received:</strong> TZS ${totalReceived.toFixed(2)}</p>
+                <p><strong>Net Present Value (NPV):</strong> TZS ${npv.toFixed(2)}</p>
+                <p><strong>Total Interest Earned:</strong> TZS ${totalInterestEarned.toFixed(2)}</p>
+            `;
+            
+            document.getElementById('calculationResults').innerHTML = resultsHtml;
+            const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
+            resultModal.show();
+        }
 
         // Real-time validation on input
         const formFields = document.querySelectorAll('#bondForm .form-control, #bondForm .form-select');
