--- a/g.html
+++ b/g.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Custom Styling */
+        /* Custom Styles */
         body {
             background-color: #f5f7fa;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -50,20 +50,6 @@
         }
         .navbar-toggler-icon {
             background-color: #000;
-            display: block;
-            width: 25px;
-            height: 2px;
-            margin: 5px 0;
-            transition: transform 0.4s;
-        }
-        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(1) {
-            transform: rotate(45deg) translate(5px, 5px);
-        }
-        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(3) {
-            transform: rotate(-45deg) translate(5px, -5px);
-        }
-        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(2) {
-            opacity: 0;
         }
         .form-spacing {
             margin-bottom: 1.5rem;
@@ -78,26 +64,9 @@
         /* Validation Styles */
         .form-control.invalid {
             border-color: red;
-            padding-right: 2.5rem;
-            position: relative;
-        }
-        .form-control.invalid ~ .input-icon {
-            display: block;
-            color: red;
         }
         .form-control.valid {
             border-color: green;
-            padding-right: 2.5rem;
-        }
-        .input-icon {
-            position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            display: none;
-        }
-        .input-icon.success {
-            color: green;
         }
         .error-message {
             color: red;
@@ -115,8 +84,6 @@
         </a>
         <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
-            <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
 
@@ -124,44 +91,39 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="calculator-card">
-                    <h2 class="mb-4">Loan details</h2>
-                    <!-- Bond Calculator Form -->
+                    <h2 class="mb-4">Bond Calculator</h2>
                     <form id="bondForm" class="mt-4">
-                        <div class="mb-3 form-spacing position-relative">
+                        <div class="mb-3 form-spacing">
                             <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
                             <input type="tel" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
-                            <span class="input-icon">!</span>
                             <div class="error-message" id="faceValueError"></div>
                         </div>
 
-                        <div class="mb-3 form-spacing position-relative">
+                        <div class="mb-3 form-spacing">
                             <label for="couponRate" class="form-label">Coupon Rate (%)</label>
                             <input type="number" step="0.01" class="form-control" id="couponRate" placeholder="Enter coupon rate" required>
-                            <span class="input-icon">!</span>
                             <div class="error-message" id="couponRateError"></div>
                         </div>
 
-                        <div class="mb-3 form-spacing position-relative">
+                        <div class="mb-3 form-spacing">
                             <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
                             <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" required>
-                            <span class="input-icon">!</span>
                             <div class="error-message" id="yearsToMaturityError"></div>
                         </div>
 
-                        <div class="mb-3 form-spacing position-relative">
+                        <div class="mb-3 form-spacing">
                             <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
                             <select class="form-select" id="paymentFrequency" required>
-                                <option value="">Choose...</option>
+                                <option value="" disabled selected>Choose...</option>
                                 <option value="1">Annually</option>
                                 <option value="2">Semi-Annually</option>
                                 <option value="4">Quarterly</option>
                             </select>
-                            <span class="input-icon">!</span>
                             <div class="error-message" id="paymentFrequencyError"></div>
                         </div>
 
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="" id="initiationFee">
+                            <input class="form-check-input" type="checkbox" id="initiationFee">
                             <label class="form-check-label" for="initiationFee">
                                 Include initiation fee in your bond?
                             </label>
@@ -203,20 +165,13 @@
 
     <!-- Custom Script -->
     <script>
-        // Animate Hamburger Menu
-        const toggler = document.querySelector('.navbar-toggler');
-        toggler.addEventListener('click', () => {
-            toggler.classList.toggle('collapsed');
-        });
-
         // Format input with commas as the user types in the face value field
-        const faceValueInput = document.getElementById('faceValue');
-        faceValueInput.addEventListener('input', function() {
+        document.getElementById('faceValue').addEventListener('input', function() {
             let value = this.value.replace(/,/g, '');
             this.value = new Intl.NumberFormat().format(value);
         });
 
-        // Form validation and styling
+        // Form validation and submission
         document.getElementById('bondForm').addEventListener('submit', function (event) {
             event.preventDefault();
             if (validateForm()) {
@@ -229,20 +184,15 @@
             let isValid = true;
 
             formFields.forEach(field => {
-                const icon = field.nextElementSibling;
-                const errorMsg = field.nextElementSibling.nextElementSibling;
-
+                const errorMsg = field.nextElementSibling;
                 if (field.value.trim() === '') {
                     field.classList.add('invalid');
-                    field.classList.remove('valid');
-                    icon.classList.remove('success');
                     errorMsg.textContent = 'This field is required.';
                     isValid = false;
                 } else {
-                    field.classList.add('valid');
                     field.classList.remove('invalid');
-                    icon.classList.add('success');
-                    errorMsg.textContent = ''; // Clear error message
+                    field.classList.add('valid');
+                    errorMsg.textContent = '';
                 }
             });
 
@@ -250,12 +200,12 @@
         }
 
         function calculateBondPrice() {
-            const faceValue = parseFloat(faceValueInput.value.replace(/,/g, ''));
+            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, ''));
             const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
             const yearsToMaturity = parseInt(document.getElementById('yearsToMaturity').value);
             const paymentFrequency = parseInt(document.getElementById('paymentFrequency').value);
 
-            // Calculate bond price (simplified formula)
+            // Calculate bond price
             const couponPayment = faceValue * couponRate / paymentFrequency;
             const totalPayments = yearsToMaturity * paymentFrequency;
             let bondPrice = 0;
@@ -263,14 +213,13 @@
             for (let i = 1; i <= totalPayments; i++) {
                 bondPrice += couponPayment / Math.pow(1 + couponRate / paymentFrequency, i);
             }
-
             bondPrice += faceValue / Math.pow(1 + couponRate / paymentFrequency, totalPayments);
 
             // Additional calculations
             const totalCouponPayments = couponPayment * totalPayments;
             const totalReceived = bondPrice + totalCouponPayments;
-            const npv = bondPrice; // For simplicity, we're treating the bond price as NPV here
-            const totalInterestEarned = totalCouponPayments - bondPrice; // Total interest earned
+            const npv = bondPrice; 
+            const totalInterestEarned = totalCouponPayments - bondPrice;
 
             // Display results in modal
             const resultsHtml = `
@@ -287,11 +236,8 @@
         }
 
         // Real-time validation on input
-        const formFields = document.querySelectorAll('#bondForm .form-control, #bondForm .form-select');
-        formFields.forEach(field => {
-            field.addEventListener('input', () => {
-                validateForm();
-            });
+        document.querySelectorAll('#bondForm .form-control, #bondForm .form-select').forEach(field => {
+            field.addEventListener('input', validateForm);
         });
     </script>
 
