--- a/temp.html
+++ b/temp.html
@@ -50,15 +50,34 @@
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-light border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
         <a class="navbar-brand" href="#">
             <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
+            <h1>Safe Bank Plc</h1>
         </a>
-        <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             <span class="navbar-toggler-icon"></span>
             <span class="navbar-toggler-icon"></span>
         </button>
+
+        <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Loans</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     <!-- Footer -->
