--- a/temp.html
+++ b/temp.html
@@ -37,6 +37,11 @@
             margin-top: 2rem;
         }
 
+        .navbar-nav {
+            flex-grow: 1;
+            justify-content: center;
+        }
+
         .navbar h1 {
             font-size: 1.5rem;
             margin: 0;
@@ -60,8 +65,9 @@
             </button>
         </div>
 
+        <!-- Centered Navbar Links -->
         <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav mx-auto text-center">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
                 </li>
