--- a/temp.html
+++ b/temp.html
@@ -86,7 +86,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Bond Calculator &copy; 2024</p>
+        <p>Safe Bank Plc &copy; 2024</p>
     </footer>
 
     <!-- Bootstrap 5 JS and dependencies -->
