--- a/temp.html
+++ b/temp.html
@@ -31,17 +31,32 @@
             transition: transform 0.4s;
         }
         footer {
-            background-color: #f8f9fa;
-            padding: 1rem 0;
+            background-color: #343a40;
+            color: #ffffff;
+            padding: 2rem 0;
             text-align: center;
-            margin-top: 2rem;
         }
-
+        footer .footer-links a {
+            color: #ffffff;
+            text-decoration: none;
+            margin: 0 10px;
+            font-size: 1rem;
+        }
+        footer .footer-links a:hover {
+            text-decoration: underline;
+        }
+        footer .social-icons a {
+            color: #ffffff;
+            font-size: 1.5rem;
+            margin: 0 10px;
+        }
+        footer .social-icons a:hover {
+            color: #17a2b8;
+        }
         .navbar-nav {
             flex-grow: 1;
             justify-content: center;
         }
-
         .navbar h1 {
             font-size: 1.5rem;
             margin: 0;
@@ -52,7 +67,7 @@
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="#">
                 <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
@@ -86,11 +101,43 @@
 
     <!-- Footer -->
     <footer>
-        <p>Safe Bank Plc &copy; 2024</p>
+        <div class="container">
+            <div class="row">
+                <!-- Footer Links -->
+                <div class="col-md-4">
+                    <h5>Quick Links</h5>
+                    <div class="footer-links">
+                        <a href="#">About Us</a> | 
+                        <a href="#">Loans</a> | 
+                        <a href="#">Privacy Policy</a>
+                    </div>
+                </div>
+                <!-- Contact Info -->
+                <div class="col-md-4">
+                    <h5>Contact Us</h5>
+                    <p>Email: info@safebankplc.com</p>
+                    <p>Phone: +255 123 456 789</p>
+                    <p>Address: Dar es Salaam, Tanzania</p>
+                </div>
+                <!-- Social Icons -->
+                <div class="col-md-4">
+                    <h5>Follow Us</h5>
+                    <div class="social-icons">
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="my-4">
+            <p class="mb-0">Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
+        </div>
     </footer>
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap Icons CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 
 </body>
 </html>
