--- a/temp.html
+++ b/temp.html
@@ -31,32 +31,17 @@
             transition: transform 0.4s;
         }
         footer {
-            background-color: #343a40;
-            color: #ffffff;
-            padding: 2rem 0;
+            background-color: #f8f9fa;
+            padding: 1rem 0;
             text-align: center;
+            margin-top: 2rem;
         }
-        footer .footer-links a {
-            color: #ffffff;
-            text-decoration: none;
-            margin: 0 10px;
-            font-size: 1rem;
-        }
-        footer .footer-links a:hover {
-            text-decoration: underline;
-        }
-        footer .social-icons a {
-            color: #ffffff;
-            font-size: 1.5rem;
-            margin: 0 10px;
-        }
-        footer .social-icons a:hover {
-            color: #17a2b8;
-        }
+
         .navbar-nav {
             flex-grow: 1;
             justify-content: center;
         }
+
         .navbar h1 {
             font-size: 1.5rem;
             margin: 0;
@@ -101,16 +86,11 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <hr class="my-4">
-            <p class="mb-0">Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
-        </div>
+        <p>Bond Calculator &copy; 2024</p>
     </footer>
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap Icons CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 
 </body>
 </html>
