--- a/temp.html
+++ b/temp.html
@@ -21,14 +21,23 @@
         }
         .navbar-toggler {
             border: none;
+            padding: 0;
         }
-        .navbar-toggler-icon {
+        .navbar-toggler .icon-bar {
+            width: 30px;
+            height: 3px;
             background-color: #000;
-            display: block;
-            width: 25px;
-            height: 2px;
             margin: 5px 0;
-            transition: transform 0.4s;
+            transition: all 0.4s;
+        }
+        .navbar-toggler.collapsed .icon-bar:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+        .navbar-toggler.collapsed .icon-bar:nth-child(2) {
+            opacity: 0;
+        }
+        .navbar-toggler.collapsed .icon-bar:nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
         }
         footer {
             background-color: #343a40;
@@ -74,9 +83,9 @@
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
         </div>
 
@@ -139,8 +148,8 @@
     <!-- Bootstrap Icons CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 
+    <!-- Custom Script for Hamburger Animation -->
     <script>
-        // Animate Hamburger Menu
         const toggler = document.querySelector('.navbar-toggler');
         toggler.addEventListener('click', () => {
             toggler.classList.toggle('collapsed');
