--- a/temp.html
+++ b/temp.html
@@ -75,7 +75,7 @@
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-primary border-bottom">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="#">
                 <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
