--- a/table.html
+++ b/table.html
@@ -110,6 +110,54 @@
         </div>
     </nav>
 
+    <!-- Responsive Data Table -->
+    <div class="container my-4">
+        <h2 class="text-center">Job Applications</h2>
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover">
+                <thead class="table-dark">
+                    <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                        <th>Position</th>
+                        <th>Date Applied</th>
+                        <th>Status</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>John Doe</td>
+                        <td>Software Developer</td>
+                        <td>2024-09-25</td>
+                        <td><span class="badge bg-success">Approved</span></td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Jane Smith</td>
+                        <td>Data Analyst</td>
+                        <td>2024-09-23</td>
+                        <td><span class="badge bg-warning text-dark">Pending</span></td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Michael Johnson</td>
+                        <td>UX/UI Designer</td>
+                        <td>2024-09-20</td>
+                        <td><span class="badge bg-danger">Rejected</span></td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Lisa Brown</td>
+                        <td>Project Manager</td>
+                        <td>2024-09-18</td>
+                        <td><span class="badge bg-success">Approved</span></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer>
         <div class="container">
